--- a/contact.html
+++ b/contact.html
@@ -54,25 +54,25 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="firstName">Prénom</label>
-                        <input type="text" class="form-control" id="firstNameForm" placeholder="Votre prénom">
+                        <input type="text" class="form-control" id="firstNameForm" label="prénom" placeholder="Votre prénom">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="lastName">Nom</label>
-                        <input type="text" class="form-control" id="lastNameForm" placeholder="Votre nom">
+                        <input type="text" class="form-control" id="lastNameForm" label="nom"placeholder="Votre nom">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email">e-mail</label>
-                    <input type="email" class="form-control" id="emailForm" placeholder="email">
+                    <input type="email" class="form-control" id="emailForm" label="email" placeholder="email">
                 </div>
                 <div class="form-group">
                     <label for="phoneNumbre">N° de téléphone</label>
-                    <input type="tel" class="form-control" id="phoneForm" placeholder="N° de téléphone">
+                    <input type="tel" class="form-control" id="phoneForm" label="phone number" placeholder="N° de téléphone">
                 </div>
                 <div class="form-row">
                     <div class="form-group">
                         <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?</label>
-                        <select class="custom-select mr-sm-2" id="menuReason">
+                        <select class="custom-select mr-sm-2" id="menuReason" label="raison de votre message">
                             <option value="Réservation">Je veux réserver</option>
                             <option value="Question">J'ai une question</option>
                             <option value="Job">Je cherche un job</option>
@@ -86,26 +86,26 @@
                     <div class="col-sm-12 col-md-3">
                         <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="RadioBruxelles" value="Bruxelles" checked>
-                        <label class="form-check-label" for="RadioBxl">
+                        <label class="form-check-label" for="RadioBxl" label="Bruxelles">
                             Bruxelles
                         </label>
                         </div>
                         <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="RadioParis" value="Paris">
-                        <label class="form-check-label" for="RadioParis">
+                        <label class="form-check-label" for="RadioParis" label="Paris">
                             Paris
                         </label>
                         </div>
                         <div class="form-check disabled">
                         <input class="form-check-input" type="radio" name="gridRadios" id="RadioTokyo" value="Tokyo">
-                        <label class="form-check-label" for="RadioTokyo">
+                        <label class="form-check-label" for="RadioTokyo" label="Tokyo">
                             Tokyo
                         </label>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout.</textarea>
+                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input" label="votre message">Expliquez nous tout.</textarea>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-lg"><span class="glyphicon glyphicon-search" style:"color:white; width: 50px;"></span>Envoyer</button>
