application footer à toutes les pages

--- a/restaurant.html
+++ b/restaurant.html
@@ -137,8 +137,8 @@
             <i class="fas fa-utensils"></i>
             <h3>Rejoins <i>Le Bistro du coin</i></h3>
             <div class="icon">
-                <a href="facebook.com"><i class="fab fa-facebook"></i></a>
-                <a href="twitter.com"><i class="fab fa-twitter-square"></i></a>
+                <a href="facebook.com" class="fab fa-facebook"><p>Facebook</p></a>
+                <a href="twitter.com" class="fab fa-twitter-square"><p>Twitter</p></a>
             </div>
         </div>
     </footer>
