--- a/contact.html
+++ b/contact.html
@@ -53,31 +53,36 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="firstName">Prénom</label>
-                        <input type="text" class="form-control" id="firstNameForm" label="prénom" placeholder="Votre prénom">
+                        <label for="firstName">Prénom
+                            <input type="text" class="form-control" id="firstNameForm" placeholder="Votre prénom">
+                        </label>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="lastName">Nom</label>
-                        <input type="text" class="form-control" id="lastNameForm" label="nom"placeholder="Votre nom">
+                        <label for="lastName">Nom
+                            <input type="text" class="form-control" id="lastNameForm" placeholder="Votre nom">
+                        </label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email">e-mail</label>
-                    <input type="email" class="form-control" id="emailForm" label="email" placeholder="email">
+                    <label for="email">e-mail
+                        <input type="email" class="form-control" id="emailForm" placeholder="email">
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumbre">N° de téléphone</label>
-                    <input type="tel" class="form-control" id="phoneForm" label="phone number" placeholder="N° de téléphone">
+                    <label for="phoneNumbre">N° de téléphone
+                        <input type="tel" class="form-control" id="phoneForm" placeholder="N° de téléphone">
+                    </label>
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?</label>
-                        <select class="custom-select mr-sm-2" id="menuReason" label="raison de votre message">
-                            <option value="Réservation">Je veux réserver</option>
-                            <option value="Question">J'ai une question</option>
-                            <option value="Job">Je cherche un job</option>
-                            <option value="Plainte">Je ne suis pas content(e)</option>
-                        </select>
+                        <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?
+                            <select class="custom-select mr-sm-2" id="menuReason">
+                                <option value="Réservation">Je veux réserver</option>
+                                <option value="Question">J'ai une question</option>
+                                <option value="Job">Je cherche un job</option>
+                                <option value="Plainte">Je ne suis pas content(e)</option>
+                            </select>
+                        </label>
                     </div>
                 </div>
                 <div class="row">
@@ -105,7 +110,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input" label="votre message">Expliquez nous tout.</textarea>
+                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout.</textarea>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-lg"><span class="glyphicon glyphicon-search" style:"color:white; width: 50px;"></span>Envoyer</button>
