--- a/contact.html
+++ b/contact.html
@@ -53,36 +53,31 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="firstName">Prénom
-                            <input type="text" class="form-control" id="firstNameForm" placeholder="Votre prénom">
-                        </label>
+                        <label for="firstName">Prénom</label>
+                        <input type="text" class="form-control" id="firstNameForm" placeholder="Votre prénom">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="lastName">Nom
-                            <input type="text" class="form-control" id="lastNameForm" placeholder="Votre nom">
-                        </label>
+                        <label for="lastName">Nom</label>
+                        <input type="text" class="form-control" id="lastNameForm" placeholder="Votre nom">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email">e-mail
-                        <input type="email" class="form-control" id="emailForm" placeholder="email">
-                    </label>
+                    <label for="email">e-mail</label>
+                    <input type="email" class="form-control" id="emailForm" placeholder="email">
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumbre">N° de téléphone
-                        <input type="tel" class="form-control" id="phoneForm" placeholder="N° de téléphone">
-                    </label>
+                    <label for="phoneNumbre">N° de téléphone</label>
+                    <input type="tel" class="form-control" id="phoneForm" placeholder="N° de téléphone">
                 </div>
                 <div class="form-row">
                     <div class="form-group">
-                        <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?
-                            <select class="custom-select mr-sm-2" id="menuReason">
-                                <option value="Réservation">Je veux réserver</option>
-                                <option value="Question">J'ai une question</option>
-                                <option value="Job">Je cherche un job</option>
-                                <option value="Plainte">Je ne suis pas content(e)</option>
-                            </select>
-                        </label>
+                        <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?</label>
+                        <select class="custom-select mr-sm-2" id="menuReason">
+                            <option value="Réservation">Je veux réserver</option>
+                            <option value="Question">J'ai une question</option>
+                            <option value="Job">Je cherche un job</option>
+                            <option value="Plainte">Je ne suis pas content(e)</option>
+                        </select>
                     </div>
                 </div>
                 <div class="row">
