--- a/carte.html
+++ b/carte.html
@@ -53,168 +53,165 @@
             <div class="row">
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Entrées</b></li>
-                    <li class="list-group-item">Dapibus ac facilisis in
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Terrine de poissons maison 
+                        <span class="badge badge-secondary">13&#8364</span>
                     </li>
-                    <li class="list-group-item">Morbi leo risus
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Assortiment de trois entrées au goût du chef
+                        <span class="badge badge-secondary">16&#8364</span>
                     </li>
-                    <li class="list-group-item">Porta ac consectetur ac
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Duo de carpaccio thon et saumon
+                        <span class="badge badge-secondary">16&#8364</span>
                     </li>
-                    <li class="list-group-item">Vestibulum at eros
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Les croquettes aux crevettes grises
+                        <span class="badge badge-secondary">14&#8364</span>
+                    </li>
+                    <li class="list-group-item">Croquettes de fromage au Vieux Bruges
+                        <span class="badge badge-secondary">13&#8364</span>
                     </li>
                 </ul>
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Salades</b></li>
-                    <li class="list-group-item">Dapibus ac facilisis in
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Salade de crottin, fruits caramélisés et pain d’épices
+                        <span class="badge badge-secondary badge-lg">17&#8364</span>
                     </li>
-                    <li class="list-group-item">Morbi leo risus
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Salade de volaille grillée, au legumes du soleil
+                        <span class="badge badge-secondary">15&#8364</span>
                     </li>
-                    <li class="list-group-item">Porta ac consectetur ac
-                        <span class="badge badge-secondary">&#8364</span>
-                    </li>
-                    <li class="list-group-item">Vestibulum at eros
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Salade de croquettes de jambon de Parme, mozzarella, et légumes grillés 
+                        <span class="badge badge-secondary">16&#8364</span>
                     </li>
                 </ul>
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Burgers</b></li>
-                    <li class="list-group-item">Dapibus ac facilisis in
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">L’italien (bœuf, roquette, pancetta, pesto et tomates)
+                        <span class="badge badge-secondary">16&#8364</span>
                     </li>
-                    <li class="list-group-item">Morbi leo risus
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Burger Du Coin (100% boeuf, croquette de fromage, pancetta)
+                        <span class="badge badge-secondary">17&#8364</span>
                     </li>
-                    <li class="list-group-item">Porta ac consectetur ac
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Le chicken (poulet-pané, bacon, tomates, salade, cornichons)
+                        <span class="badge badge-secondary">17&#8364</span>
                     </li>
-                    <li class="list-group-item">Vestibulum at eros
-                        <span class="badge badge-secondary">&#8364</span>    
+                    <li class="list-group-item">Le Veggie (Porto Bello, feta, aubergine, tapenade, tomates)
+                        <span class="badge badge-secondary">13&#8364</span>    
                     </li>
                 </ul>
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Plats</b></li>
-                    <li class="list-group-item">Dapibus ac facilisis in
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Vol-au-vent de volaille « Maison »
+                        <span class="badge badge-secondary">18&#8364</span>
                     </li>
-                    <li class="list-group-item">Morbi leo risus
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Blanquette de veau à l’ancienne
+                        <span class="badge badge-secondary">19&#8364</span>
                     </li>
-                    <li class="list-group-item">Porta ac consectetur ac
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Sole meunière (+/- 400 gr), pommes frites
+                        <span class="badge badge-secondary">24&#8364</span>
                     </li>
-                    <li class="list-group-item">Vestibulum at eros
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Marmite du pêcheur, rouille et ses croûtons
+                        <span class="badge badge-secondary">18&#8364</span>
                     </li>
                 </ul>
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les desserts</b></li>
-                    <li class="list-group-item">Dapibus ac facilisis in
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Crème brûlée à la vanille bourbon
+                        <span class="badge badge-secondary">10&#8364</span>
                     </li>
-                    <li class="list-group-item">Morbi leo risus
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Tarte du jour
+                        <span class="badge badge-secondary">8&#8364</span>
                     </li>
-                    <li class="list-group-item">Porta ac consectetur ac
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Tiramisu aux spéculoos
+                        <span class="badge badge-secondary">10&#8364</span>
                     </li>
-                    <li class="list-group-item">Vestibulum at eros
-                        <span class="badge badge-secondary">&#8364</span>
+                    <li class="list-group-item">Café gourmand
+                        <span class="badge badge-secondary">12&#8364</span>
                     </li>
                 </ul>
                 <br />
                 <ul class="list-group col-ms-11 col-md-5">
                         <li class="list-group-item titre"><b>Les Boissons Fraîches</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Eau plate/petillante 25/50
+                            <span class="badge badge-secondary">2,5/5&#8364</span>
                         </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Soda
+                            <span class="badge badge-secondary">3,5&#8364</span>
                         </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Jus (bouteille)
+                            <span class="badge badge-secondary">3,4&#8364</span>
                         </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Jus pressé
+                            <span class="badge badge-secondary">4,5&#8364</span>
                         </li>
                     </ul>
                     <ul class="list-group col-ms-11 col-md-5">
                         <li class="list-group-item titre"><b>Les Boissons Chaudes</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Café
+                            <span class="badge badge-secondary">1,5/3&#8364</span>
                         </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Thé artisanaux
+                            <span class="badge badge-secondary">3,5&#8364</span>
                         </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Chocolat chaud
+                            <span class="badge badge-secondary">3&#8364</span>
                         </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Irish Coffee
+                            <span class="badge badge-secondary">8&#8364</span>
                         </li>
                     </ul>
                     <ul class="list-group col-ms-11 col-md-5">
                         <li class="list-group-item titre"><b>Les Cocktails</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Mojito
+                            <span class="badge badge-secondary">8&#8364</span>
                         </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Caipirinha
+                            <span class="badge badge-secondary">8&#8364</span>
                         </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Pina Colada
+                            <span class="badge badge-secondary">8&#8364</span>
                         </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
-                        </li>
-                    </ul>
-                    <ul class="list-group col-ms-11 col-md-5">
-                        <li class="list-group-item titre"><b>Les Vins</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
-                        </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
-                        </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
-                        </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Margarita
+                            <span class="badge badge-secondary">8&#8364</span>
                         </li>
                     </ul>
                     <ul class="list-group col-ms-11 col-md-5">
                         <li class="list-group-item titre"><b>Les bières</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Grimbergen
+                            <span class="badge badge-secondary">3,5&#8364</span>
                         </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Chimay bleue
+                            <span class="badge badge-secondary">4,5&#8364</span>
                         </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Chimay blanche
+                            <span class="badge badge-secondary">4,5&#8364</span>
                         </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Mort Subite
+                            <span class="badge badge-secondary">3&#8364</span>
+                        </li>
+                        <li class="list-group-item">Hoegaarden
+                            <span class="badge badge-secondary">3&#8364</span>
+                        </li>
+                        <li class="list-group-item">Rochefort 8°
+                            <span class="badge badge-secondary">4,5&#8364</span>
+                        </li>
+                        <li class="list-group-item">Delta IPA
+                            <span class="badge badge-secondary">4,5&#8364</span>
+                        </li>
+                        <li class="list-group-item">Orval
+                            <span class="badge badge-secondary">6&#8364</span>
                         </li>
                     </ul>
                     <ul class="list-group col-ms-11 col-md-5">
                         <li class="list-group-item titre"><b>Les Whisky</b></li>
-                        <li class="list-group-item">Dapibus ac facilisis in
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">The Glenlivet
+                            <span class="badge badge-secondary">12&#8364</span>
                         </li>
-                        <li class="list-group-item">Morbi leo risus
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">McAllan Amber
+                            <span class="badge badge-secondary">14&#8364</span>
                         </li>
-                        <li class="list-group-item">Porta ac consectetur ac
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Lagavulin 16 ans
+                            <span class="badge badge-secondary">15&#8364</span>
                         </li>
-                        <li class="list-group-item">Vestibulum at eros
-                            <span class="badge badge-secondary">&#8364</span>
+                        <li class="list-group-item">Hibiki Harmony
+                            <span class="badge badge-secondary">20&#8364</span>
                         </li>
                     </ul>
             </div>
