--- a/carte.html
+++ b/carte.html
@@ -72,7 +72,7 @@
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Salades</b></li>
                     <li class="list-group-item">Salade de crottin, fruits caramélisés et pain d’épices
-                        <span class="badge badge-secondary badge-lg">17&#8364</span>
+                        <span class="badge badge-secondary">17&#8364</span>
                     </li>
                     <li class="list-group-item">Salade de volaille grillée, au legumes du soleil
                         <span class="badge badge-secondary">15&#8364</span>
