ajustement 4eme essai glyphicon

--- a/carte.html
+++ b/carte.html
@@ -53,31 +53,31 @@
             <div class="row">
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Entrées</b></li>
-                    <li class="list-group-item">Terrine de poissons maison 
+                    <li class="list-group-item">Terrine de poissons  
                         <span class="badge badge-secondary">13&#8364</span>
                     </li>
-                    <li class="list-group-item">Assortiment de trois entrées au goût du chef
+                    <li class="list-group-item">Assortiment d'entrées du chef
                         <span class="badge badge-secondary">16&#8364</span>
                     </li>
                     <li class="list-group-item">Duo de carpaccio thon et saumon
                         <span class="badge badge-secondary">16&#8364</span>
                     </li>
-                    <li class="list-group-item">Les croquettes aux crevettes grises
+                    <li class="list-group-item">Les croquettes aux crevettes
                         <span class="badge badge-secondary">14&#8364</span>
                     </li>
-                    <li class="list-group-item">Croquettes de fromage au Vieux Bruges
+                    <li class="list-group-item">Croquettes de fromage
                         <span class="badge badge-secondary">13&#8364</span>
                     </li>
                 </ul>
                 <ul class="list-group col-ms-11 col-md-5">
                     <li class="list-group-item titre"><b>Les Salades</b></li>
-                    <li class="list-group-item">Salade de crottin, fruits caramélisés et pain d’épices
+                    <li class="list-group-item">Salade de crottin et pain d’épices
                         <span class="badge badge-secondary">17&#8364</span>
                     </li>
-                    <li class="list-group-item">Salade de volaille grillée, au legumes du soleil
+                    <li class="list-group-item">Salade de volaille au legumes du soleil
                         <span class="badge badge-secondary">15&#8364</span>
                     </li>
-                    <li class="list-group-item">Salade de croquettes de jambon de Parme, mozzarella, et légumes grillés 
+                    <li class="list-group-item">Salade de croquettes, mozzarella et légumes grillés 
                         <span class="badge badge-secondary">16&#8364</span>
                     </li>
                 </ul>
@@ -86,10 +86,10 @@
                     <li class="list-group-item">L’italien (bœuf, roquette, pancetta, pesto et tomates)
                         <span class="badge badge-secondary">16&#8364</span>
                     </li>
-                    <li class="list-group-item">Burger Du Coin (100% boeuf, croquette de fromage, pancetta)
+                    <li class="list-group-item">Burger Du Coin (100% boeuf, fromage, pancetta)
                         <span class="badge badge-secondary">17&#8364</span>
                     </li>
-                    <li class="list-group-item">Le chicken (poulet-pané, bacon, tomates, salade, cornichons)
+                    <li class="list-group-item">Le chicken (poulet-pané, bacon, tomates, cornichons)
                         <span class="badge badge-secondary">17&#8364</span>
                     </li>
                     <li class="list-group-item">Le Veggie (Porto Bello, feta, aubergine, tapenade, tomates)
