--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                     <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout.</textarea>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-lg"><span class="glyphicon glyphicon-send gi-lg">   </span>Envoyer</button>
+                    <button type="submit" class="btn btn-lg"><span class="fas fa-paper-plane"></span>Envoyer</button>
                 </div>
             </form>
         </section>
